@@ -100,10 +100,6 @@ interior.element=common
 inherits=PanelButtonCommand
 frame.element=lineedit
 interior.element=lineedit
-text.margin.top=0
-text.margin.bottom=0
-text.margin.left=1
-text.margin.right=1
 
 [DropDownButton]
 inherits=PanelButtonCommand
