@@ -7,6 +7,7 @@ V0.4.1
  * Draw a more elegant rubber band.
  * Added the possibility to set the slider thickness and also the length and thickness of slider handles.
  * Skip ugly frames.
+ * No frame for a line-edit inside a view-item whose text is being edited.
 
 V0.4
 ---------
